Fixes the right white space on mobile responsive state

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,10 @@
   font-family: "Nunito", sans-serif;
 }
 
-body {
-  overflow-x: hidden;
+body,
+html {
+  width: auto !important;
+  overflow-x: hidden !important;
 }
 
 .nav-link {
